chore: bootstrap releasing
Signed-off-by: Panos Vagenas <35837085+vagenas@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "docling-haystack"
-version = "0.1.0"
+version = "0.1.1"   # DO NOT EDIT, updated automatically
 description = "Docling Haystack converter"
 authors = ["Panos Vagenas <pva@zurich.ibm.com>"]
 readme = "README.md"
